// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton> should render as expected 1`] = `
<label
  className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 fKneza aries-radiobtn"
  disabled={false}
  tabIndex={0}
>
  <input
    disabled={false}
    name="job-type"
    type="radio"
    value="full-time"
  />
  <span
    className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 YTOlp"
    data-testid="radio-icon"
    disabled={false}
    size="regular"
  />
  <span
    className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 hidUsh radiobtn-content"
    disabled={false}
    size="regular"
    tabIndex={-1}
  >
    Full Time
  </span>
</label>
`;

exports[`<RadioButton> should render as expected 2`] = `
<label
  className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 fxmRfM aries-radiobtn"
  disabled={false}
  tabIndex={0}
>
  <input
    disabled={false}
    name="job-type"
    type="radio"
    value="full-time"
  />
  <span
    className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 gEkgbr"
    data-testid="radio-icon"
    disabled={false}
    size="regular"
  />
  <span
    className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 WanjR radiobtn-content"
    disabled={false}
    size="regular"
    tabIndex={-1}
  >
    Full Time
  </span>
</label>
`;

exports[`<RadioButton> should render as expected 3`] = `
Array [
  <label
    className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 fKneza aries-radiobtn"
    disabled={false}
    tabIndex={0}
  >
    <input
      disabled={false}
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 YTOlp"
      data-testid="radio-icon"
      disabled={false}
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 hidUsh radiobtn-content"
      disabled={false}
      size="regular"
      tabIndex={-1}
    >
      Full Time
    </span>
  </label>,
  <label
    className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 fKneza aries-radiobtn"
    disabled={false}
    tabIndex={0}
  >
    <input
      disabled={false}
      name="job-type"
      type="radio"
      value="intership"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 YTOlp"
      data-testid="radio-icon"
      disabled={false}
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 hidUsh radiobtn-content"
      disabled={false}
      size="regular"
      tabIndex={-1}
    >
      Intership
    </span>
  </label>,
]
`;

exports[`<RadioButton> should render as expected 4`] = `
Array [
  <label
    className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 fKneza aries-radiobtn"
    disabled={false}
    tabIndex={0}
  >
    <input
      checked={true}
      disabled={false}
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 YTOlp"
      data-testid="radio-icon"
      disabled={false}
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 hidUsh radiobtn-content"
      disabled={false}
      size="regular"
      tabIndex={-1}
    >
      Full Time
    </span>
  </label>,
  <label
    className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 fKneza aries-radiobtn"
    disabled={false}
    tabIndex={0}
  >
    <input
      disabled={false}
      name="job-type"
      type="radio"
      value="intership"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 YTOlp"
      data-testid="radio-icon"
      disabled={false}
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 hidUsh radiobtn-content"
      disabled={false}
      size="regular"
      tabIndex={-1}
    >
      Intership
    </span>
  </label>,
]
`;
